--- a/backend/RoboticForkliftControlSystem.Api/appsettings.json
+++ b/backend/RoboticForkliftControlSystem.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Database=forklift_management;Username=postgres;Password=your_password_here"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
