--- a/backend/RoboticForkliftControlSystem.Api/RoboticForkliftControlSystem.Api.csproj
+++ b/backend/RoboticForkliftControlSystem.Api/RoboticForkliftControlSystem.Api.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.6.9" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
