--- a/backend/RoboticForkliftControlSystem.Api/appsettings.Development.json
+++ b/backend/RoboticForkliftControlSystem.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedOrigins": [
+    "http://localhost:3000",
+    "http://localhost:5173"
+  ]
 }
