--- a/backend/RoboticForkliftControlSystem.Api/appsettings.json
+++ b/backend/RoboticForkliftControlSystem.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=forklift_management;Username=postgres;Password=your_password_here"
+    "Default": ""
   },
   "Logging": {
     "LogLevel": {
@@ -9,9 +9,5 @@
     }
   },
  
-    "AllowedHosts": "*",
-    "AllowedOrigins": [
-      "http://localhost:3000",
-      "http://localhost:5173"
-    ]
+    "AllowedHosts": "*"
 }
