--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -5,7 +5,7 @@ on:
         branches: [main]
         paths:
             - 'frontend/**'
-            - '.github/workflows/azure-static-web-apps-wonderful-desert-077b05700.yml'
+            - '.github/workflows/deploy-fe.yml'
     workflow_dispatch:
 
 jobs:
@@ -21,6 +21,8 @@ jobs:
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
+        env:
+          VITE_API_URL: https://robotic-forklift-control-system-be-ckcmh9c6a7ghdhhv.southeastasia-01.azurewebsites.net
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_WONDERFUL_DESERT_077B05700 }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
