--- a/backend/RoboticForkliftControlSystem.Api/RoboticForkliftControlSystem.Api.csproj
+++ b/backend/RoboticForkliftControlSystem.Api/RoboticForkliftControlSystem.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.6.9" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
